--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.3",
-  "name": "@lancejpollard/ovo",
+  "version": "1.3.0",
+  "name": "@mountbuild/ovo.js",
   "main": "form.js"
 }
