--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0",
-  "name": "@mountbuild/ovo.js",
+  "version": "1.4.0",
+  "name": "@mountbuild/ovo",
   "main": "form.js"
 }
