--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "version": "1.1.2",
   "name": "@mountbuild/call-script",
-  "main": "form.js"
+  "main": "form.js",
+  "dependencies": {
+    "@mountbuild/script-tree": "1.0.0"
+  }
 }
