--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "4.0.5",
-  "name": "@drumwork/call",
+  "version": "1.0.0",
+  "name": "@tunebond/call-text",
   "main": "form.js",
   "dependencies": {
     "@lancejpollard/script-tree": "^1.1.1"
