--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "version": "1.0.0",
   "name": "@tunebond/chat",
-  "main": "form.js",
+  "main": "host/index.js",
   "dependencies": {
     "@lancejpollard/script-tree": "^1.1.1"
   },
   "files": [
-    "form.js"
+    "./host/index.js",
+    "./host/index.d.ts"
   ],
   "scripts": {
     "make": "tsc && tsc-alias",
     "scan": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
     "lint": "eslint --ext .ts ./make",
     "lint:fix": "npm run lint -- --fix",
-    "test:make": "npx ts-node-esm -P tsconfig.json test/make.ts",
-    "test": "npx ts-node-esm -P tsconfig.json test/load.ts",
+    "test": "npx tsx test.ts",
     "host": "pnpm make && npm publish --access=public"
   },
   "devDependencies": {
+    "tsx": "^3.12.7",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.11.17",
