--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "name": "@tunebond/read",
+  "name": "@nerdbond/read",
   "main": "host/index.js",
   "license": "Apache 2.0",
   "dependencies": {
