--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "1.2.13",
-  "name": "@textsurf/chat",
+  "name": "@termsurf/chat",
   "main": "host/index.js",
   "license": "Apache 2.0",
   "dependencies": {
