--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "version": "1.4.2",
-  "name": "@termsurf/chat",
+  "version": "2.0.0",
+  "name": "@termsurf/talk",
   "main": "host/index.js",
   "license": "Apache 2.0",
   "dependencies": {
