--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "moduleResolution": "node",
     "strictNullChecks": true,
     "strict": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "noUncheckedIndexedAccess": true,
     "baseUrl": "./",
